# ThySqueal

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Cargo.toml  Makefile  README.md
client/: Cargo.toml
client/src/: config.rs  http.rs  main.rs  repl.rs
server/: Cargo.toml
server/config-example/: thysqueal.yml
server/config-example/engies/: mysql.yml  redis.yml
server/src/: config.rs  http.rs  main.rs  network.rs  sql.pest  tests.rs
server/src/engines/: available.rs  mod.rs
server/src/engines/elastic/: mod.rs
server/src/engines/mysql/: error.rs  mod.rs  mysql.pest  mysql_config.rs  mysql_engine.rs
server/src/engines/redis/: mod.rs  protocol.rs  redis_engine.rs  tests.rs
server/src/engines/traits/: config.rs  engine.rs  mod.rs  parser.rs  protocol.rs  registry.rs
server/src/engines_mysql/: mod.rs
server/src/engines_mysql/eval/: column.rs  condition.rs  mod.rs
server/src/engines_mysql/executor/: dispatch.rs  dump.rs  exec.rs  explain.rs  kv_list.rs  kv_set.rs  kv_string.rs  materialized.rs  mod.rs  plan.rs  search.rs  set.rs  tx.rs  window.rs
server/src/mysql/: connection.rs
server/src/redis/: connection.rs  mod.rs  resp.rs  tests.rs
server/src/redis/connection/: mod.rs
server/src/sql/: ast.rs  error.rs  eval.rs  mod.rs  parser.rs  sql.pest
server/src/sql/ast/: condition.rs  expression.rs  mod.rs  statements.rs
server/src/sql/eval/: condition.rs  expression.rs  mod.rs
server/src/sql/executor/: aggregate.rs  ddl.rs  dispatch.rs  dml.rs  dump.rs  exec.rs  explain.rs  helpers.rs  kv_hash.rs  kv_list.rs  kv_set.rs  kv_stream.rs  kv_string.rs  kv_zset.rs  materialized.rs  mod.rs  plan.rs  privilege.rs  pubsub.rs  result.rs  search.rs  select.rs  session.rs  set.rs  tests.rs  tx.rs  user.rs  window.rs
server/src/sql/parser/: ddl.rs  dml.rs  (+4 more)
server/src/squeal/: conversions.rs  expr.rs  mod.rs  stmt.rs
server/src/storage/: database.rs  error.rs  index.rs  info_schema.rs  mod.rs  mutation.rs  persistence.rs  row.rs  search.rs  table.rs  types.rs  value.rs  wal.rs
server/src/tests/: dump_restore.rs  info_schema.rs  lifecycle.rs  mod.rs  persistence.rs  search.rs  transactions.rs
(+310 files in other folders)
