[package]
name = "thy-squeal-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "thysqueal-cli"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true

reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
shellexpand = "3"
