[package]
name = "thysqueal-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "thysqueal-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
clap.workspace = true
anyhow.workspace = true
pest.workspace = true
pest_derive.workspace = true
byteorder = "1.5"
bytes = "1.6"
bcrypt = "0.15"

axum = "0.7"
dashmap = "5"
moka = { version = "0.12", features = ["sync", "future"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sled = "0.34"
tantivy = "0.22"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-trait = "0.1"
base64 = "0.22"
futures = "0.3"
regex = "1"
md5 = "0.7"
sha2 = "0.10"
strum = "0.28"
strum_macros = "0.28"

[features]
default = []
